# YT_Downloader

./: .gitignore  README.md  build_windows.ps1  pyproject.toml  run.py  run_gui.py  ytd_gui.spec
src/yt_downloader/: cli.py  downloader.py  gui.py  paths.py  prompts.py
